--- a/first/index.html
+++ b/first/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<div id="app">
-  <input type="text" v-on:input="changeTitle">
-  <p>{{ title }}</p>  
+  <h1 v-once>{{ title }}</h1>
+  <p> {{sayHello()}} - <a v-bind:href="link">Google</a></p>
 </div>
 
 
