--- a/first/index.html
+++ b/first/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 	<div id="app">
-  <h1 v-once>{{ title }}</h1>
-  <p> {{sayHello()}} - <a v-bind:href="link">Google</a></p>
-</div>
+  	<button v-on:click="increase">Click</button>
+  	<p>{{ counter }}</p>
+  	<p v-on:mousemove="updateCoordinates">Coordinates: {{ x }} / {{ y }}</p>
+	</div>
 
 
 <script src="script.js"></script>	
