--- a/first/index.html
+++ b/first/index.html
@@ -4,14 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script src="../vue.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id="app">
-  	<button v-on:click="counter++">Increase</button>
-  	<button v-on:click="counter--">Decrease</button>
-  	<button v-on:click="secondCounter++">Increase Second</button>
-  	<p>Counter: {{ counter }} | {{ secondCounter }}</p>
-  	<p>Result: {{ result() }} | {{ output }}</p>
+  	<div class="demo" :style="{backgroundColor: color}"></div>
+  	<div class="demo" :style = "myStyle"></div>
+  	<div class="demo" :style = "[myStyle, {height: width + 'px'}]"></div>
+  	<hr>
+  	<input type="text" v-model="color">
+  	<input type="text" v-model="width" @keydown.enter="width += 1">
 	</div>
 
 
